se termina el boton 3 de buscar libro

--- a/pagina_2.html
+++ b/pagina_2.html
@@ -132,7 +132,7 @@
             <button type="button" class="buscar-buton" id="btn-buscar_libro">Buscar</button>
             <a href="pagina_2.html"><button class="buscar-buton">Regresar</button></a>
         </div>
-        <div class="cuerpo_libro" id="cuerpo_libro">
+        <div id="respuesta">
 
         </div>
         
