se modifica fetch - metodo POST y se cambia por localStorage y se termina tercer btn

--- a/pagina_2.html
+++ b/pagina_2.html
@@ -98,6 +98,10 @@
                         <input type="text" name="genero" id="ing_genero">
                     </div>
                     <div>
+                        <label for="ing_fecha">Fecha en que terminaste el Libro</label>
+                        <input type="date" name="fecha" id="ing_fecha" ></input>
+                    </div>
+                    <div>
                         <label for="ing_descripcion">Comentarios sobre el Libro</label>
                         <textarea name="descripcion" id="ing_descripcion" cols="20" rows="10"></textarea>
                     </div>
@@ -115,6 +119,7 @@
                         <th>AÑO</th>
                         <th>GENERO</th>
                         <th>COMENTARIOS</th>
+                        <th>FECHA</th>
                        </tr>
                    </thead>
                    <tbody id="mostrarLibros" class="tbody">
