se realiza ultimos comentarios y ajustes

--- a/registro_password.html
+++ b/registro_password.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/index.css">
     <script src="https://kit.fontawesome.com/11d95cc3a7.js" crossorigin="anonymous"></script>
     <title>INICIO DE SESION</title>
- 
+
 </head>
 
 <body>
@@ -35,6 +35,8 @@
             </div>
         </div>
     </header>
+    <!-----------------------SECCION DE LOGIN-------------------------->
+
     <div class="section">
         <div class="container">
             <form id="form_password" class="caja_pasw">
@@ -55,7 +57,7 @@
     </div>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="JS/registro_password.js"></script>        
+    <script src="JS/registro_password.js"></script>
 </body>
 
 </html>
