se realiza ultimos comentarios y ajustes

--- a/pagina_2.html
+++ b/pagina_2.html
@@ -28,7 +28,7 @@
                         <li class="li_nav">Contactos</li>
                     </a>
                     <a href="index.html">
-                        <li class="li_nav">Salir</li>
+                        <li id="btn_salir" class="li_nav">Salir</li>
                     </a>
                 </ul>
             </div>
